add border image

--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>certificate one</title>
-</head>g
+</head>
 <body>
-    
+  <div class="contanier">
+
+  </div>
 </body>
 </html>
