add certificate content

--- a/html/index.html
+++ b/html/index.html
@@ -4,12 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>certificate one</title>
 </head>
 <body>
   <div class="contanier">
+    <div class="content">
+      <div>
+        <h1>CERTIFICATE<sub> OF</sub> RECOGNITION</h1>
+      </div>
+      <div>
+        <h5>This certificate is hereby awarded to </h5>
+      </div>
+      <div>
+        <h3>Oliva Newton</h3>
+      </div>
 
+    </div>
   </div>
 </body>
 </html>
+
