--- a/html/index.html
+++ b/html/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>certificate one</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/style.css">
+  <title>certificate one</title>
 </head>
+
 <body>
-  <div class="contanier">
+  <div class="container">
     <div class="content">
       <div>
-        <h1>CERTIFICATE<sub> OF</sub> RECOGNITION</h1>
+        <h1>CERTIFICATE <span>OF</span> RECOGNITION</h1>
       </div>
       <div>
         <h5>This certificate is hereby awarded to </h5>
@@ -19,9 +21,31 @@
       <div>
         <h3>Oliva Newton</h3>
       </div>
+      <hr class="hr">
+      <div>
+        <h2>For your exemplary contribution to women in business and to our community</h2>
+        <h2>Congratulation for winning the 2018 bravo award</h2>
+      </div>
+          <div class="badge"></div>
+      <div class="section-container">
+        <div class="section">
+          <div class="date">
+            <h6>28-7-2020</h6>
+            <hr class="section-hr">
+            <h6>Date</h6>
+          </div>
+          <div>
+            <div class="sign">
+              <h6 class="sign">Shan Nagar</h6>
+              <hr class="section-hr">
+              <h6>Signature</h6>
+            </div>
+          </div>
+        </div>
 
+      </div>
     </div>
   </div>
 </body>
-</html>
 
+</html>
