--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
+  <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
   <title>certificate one</title>
 </head>
 
@@ -26,24 +27,20 @@
         <h2>For your exemplary contribution to women in business and to our community</h2>
         <h2>Congratulation for winning the 2018 bravo award</h2>
       </div>
-          <div class="badge"></div>
       <div class="section-container">
-        <div class="section">
           <div class="date">
             <h6>28-7-2020</h6>
             <hr class="section-hr">
             <h6>Date</h6>
           </div>
-          <div>
+          <i class='bx bx-badge-check '></i>
             <div class="sign">
               <h6 class="sign">Shan Nagar</h6>
               <hr class="section-hr">
               <h6>Signature</h6>
             </div>
-          </div>
         </div>
-
-      </div>
+        
     </div>
   </div>
 </body>
